--- a/views/livros.html
+++ b/views/livros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Livros</title>
-    <link rel="stylesheet" href="../styles/livrosStyle.css">
+    <link rel="stylesheet" href="../src/styles/livrosStyle.css">
 </head>
 
 <body>
@@ -23,11 +23,11 @@
             <!-- Botões de páginas serão inseridos dinamicamente aqui -->
         </div>
 
-        <button id="btnVoltar" class="btn-voltar">Voltar</button>
+        <button id="go-back" class="go-back">Voltar</button>
     </div>
 
     <!-- Referência ao arquivo renderer.js -->
-    <script src="../renderer.js"></script>
+    <script src="../src/renderer.js"></script>
 </body>
 
 </html>
