--- a/src/styles/livrosStyle.css
+++ b/src/styles/livrosStyle.css
@@ -90,15 +90,21 @@ h1 {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
-.book-title {
+.book-titulo {
     font-size: 18px;
     font-weight: bold;
     color: #2c3e50;
 }
 
-.book-author,
-.book-quantity,
-.book-year {
+.book-data,
+.book-id,
+.book-autor,
+.book-volume,
+.book-editora,
+.book-local,
+.book-ano,
+.book-origem,
+.book-obs {
     font-size: 14px;
     color: #7f8c8d;
 }
