--- a/views/livros.html
+++ b/views/livros.html
@@ -24,7 +24,7 @@
         <!-- Botões de páginas serão inseridos dinamicamente aqui -->
     </div>
 
-    <button id="go-back" class="go-back">Voltar</button>
+    <button onclick="history.back()" class="go-back">Voltar</button>
 
     <!-- Referência ao arquivo renderer.js -->
     <script src="../src/renderer.js"></script>
