css e volta do funcionamento da lista de livros

--- a/views/index.html
+++ b/views/index.html
@@ -7,19 +7,24 @@
   <link rel="stylesheet" href="../src/styles/styles.css">
 </head>
 
-<body>
+<body class="indexBody">
   <h1>Biblioteca Municipal de Sairé</h1>
-  <img src="../src/assets/favicon-32x32.png" alt="Logo da Prefeitura">
+  <img src="../src/assets/logo_horizontal_gov_saire.png" class="logoPrefeitura" alt="Logo da Prefeitura">
   <nav>
 
-    <button id="go-to-cadastro">Cadastro</button>
-    <button id="go-to-lista">Lista de Usuários</button>
-    <button id="go-to-livros">Livros</button>
+    <button id="go-to-cadastro">Cadastro de leitores</button>
+    <button id="go-to-lista">Lista de leitores</button>
+    <button id="go-to-livros">Livros cadastrados</button>
 
   </nav>
   <div id="content"></div>
 
 </body>
+<footer>
+  <div class="autoria">
+    <h3>✮ Desenvolvido por André Ivson Lira da Silva ✮</h3>
+  </div>
+</footer>
 <script src="../src/renderer.js"></script>
 
 </html>
