--- a/src/styles/livrosStyle.css
+++ b/src/styles/livrosStyle.css
@@ -52,7 +52,7 @@ h1 {
     max-width: 200px;
     margin: 20px auto;
     padding: 12px;
-    background-color: #3498db;
+    background-color: #007bff;
     color: white;
     font-size: 16px;
     border: none;
@@ -112,7 +112,7 @@ h1 {
 .page-btn {
     padding: 10px 15px;
     margin: 0 5px;
-    background-color: #3498db;
+    background-color: #007bff;
     color: white;
     border: none;
     border-radius: 5px;
