--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,7 +2,16 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
+  height: 100vh;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.indexBody {
+  overflow: hidden;
 }
 
 h2 {
@@ -11,12 +20,11 @@ h2 {
 }
 
 form {
-  max-width: 450px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 50px;
   background: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 7px 7px 10px 10px rgb(0 0 0 / 10%);
 }
 
 label {
@@ -25,16 +33,21 @@ label {
   color: #555;
 }
 
+.logoPrefeitura {
+  width: 40%;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="tel"],
 input[type="date"] {
   width: 100%;
-  padding: 10px;
+  padding: 10px 2px;
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
   transition: border-color 0.3s;
+  font-size: 18px;
 }
 
 input[type="text"]:focus,
@@ -55,6 +68,7 @@ button {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  margin: 5px;
 }
 
 button:hover {
@@ -88,7 +102,8 @@ button:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none; /* Começa escondido */
+  display: none;
+  /* Começa escondido */
   align-items: center;
   justify-content: center;
 }
@@ -107,6 +122,14 @@ button:hover {
   right: 10px;
   font-size: 24px;
   cursor: pointer;
+}
+
+.autoria {
+  font-size: 10px;
+  position: absolute;
+  top: 96%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
