--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../src/styles/styles.css">
 </head>
 <body>
-  <h2>Cadastro de Usuário</h2>
+  <h2>Cadastro de Leitores</h2>
   <form id="formCadastro">
     <!-- Campos do formulário -->
     <label>Nome Completo: <input type="text" id="nome" required></label>
