retoques finais e melhorias técnicas

--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,11 @@
   <h1>Biblioteca Municipal de Sairé</h1>
   <img src="../src/assets/logo_horizontal_gov_saire.png" class="logoPrefeitura" alt="Logo da Prefeitura">
   <nav>
-
+    <h2>Leitores:</h2>
     <button id="go-to-cadastro">Cadastro de leitores</button>
     <button id="go-to-lista">Lista de leitores</button>
+
+    <h2>Livros:</h2>
     <button id="go-to-livros">Livros cadastrados</button>
 
   </nav>
