--- a/src/styles/listaStyle.css
+++ b/src/styles/listaStyle.css
@@ -52,31 +52,6 @@ h2 {
   background-color: #555;
 }
 
-/* Estilos do modal */
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  height: auto;
-  width: auto;
-}
-
-/* Conteúdo do modal */
-.modal-content {
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 20px;
-  width: 90%;
-  max-width: 700px;
-  box-shadow: 0 4px 8px rgb(0 0 0 / 20%);
-  display: flex;
-  text-align: left;
-  flex-direction: column;
-}
-
 /* Estilo para a imagem do usuário */
 .user-photo {
   width: 200px; /* Largura da foto */
@@ -86,29 +61,56 @@ h2 {
   object-fit: cover; /* Garante que a imagem preencha o círculo sem deformar */
 }
 
-/* Estilo de carteira de identificação */
-.modal-content h3 {
-  margin-top: 0;
-  color: #333;
-  font-size: 1.6em;
-  display: grid;
-  justify-items: center;
+/* Modal */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Acima do overlay */
+  display: none; /* Inicialmente oculto */
+  max-width: 500px; /* Largura máxima */
+  width: 90%; /* Largura responsiva */
+  box-sizing: border-box; /* Inclui padding no tamanho */
 }
-#userDetails {
+
+/* Modal Content */
+.modal-content {
   text-align: left;
-  margin-top: 10px;
-  font-size: 1.1em; /* Tamanho de fonte mais agradável */
+}
+
+.user-photo {
+  display: block;
+  margin: 0 auto 20px auto; /* Centraliza a foto e adiciona margem inferior */
+}
+
+#userDetails {
+  font-size: 1em;
+  line-height: 1.5; /* Melhor espaçamento entre linhas */
 }
 
 #userDetails strong {
-  color: #555;
-  font-weight: bold;
-  margin-bottom: 5px;
   display: block;
+  margin-top: 10px;
+  font-weight: bold;
+  color: #333;
 }
 
-#userDetails p {
-  margin: 5px 0;
+/* Overlay para escurecer */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro */
+  backdrop-filter: blur(5px); /* Blur aplicado */
+  z-index: 999; /* Abaixo do modal */
+  display: none; /* Inicialmente oculto */
 }
 
 /* Fechar modal */
