--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,6 +25,7 @@ form {
   background: #fff;
   border-radius: 8px;
   box-shadow: 7px 7px 10px 10px rgb(0 0 0 / 10%);
+  width: 40%;
 }
 
 label {
@@ -94,33 +95,21 @@ button:hover {
   background-color: #2980b9;
 }
 
-/* Modal básico */
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
+#camera, #capturedPhoto {
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: none;
-  /* Começa escondido */
-  align-items: center;
-  justify-content: center;
-}
-
-.modal-content {
-  background-color: white;
-  padding: 20px;
-  border-radius: 5px;
-  width: 400px;
-  text-align: left;
+  height: auto;
+  max-height: 400px;
+  border-radius: 8px;
+  overflow: hidden;
+  max-width: 500px;
 }
 
 .close {
   position: absolute;
   top: 10px;
   right: 10px;
-  font-size: 24px;
+  font-size: 30px;
+  font-weight: bold;
   cursor: pointer;
 }
 
