--- a/src/styles/livrosStyle.css
+++ b/src/styles/livrosStyle.css
@@ -29,7 +29,7 @@ h1 {
     max-width: 200px;
     margin: 20px auto;
     padding: 12px;
-    background-color: #3498db;
+    background-color: #007bff;
     color: white;
     font-size: 16px;
     border: none;
@@ -78,6 +78,8 @@ h1 {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     transition: transform 0.2s ease;
+    height: 250px;
+    width: 300px;
 }
 
 .book-item:hover {
