--- a/src/styles/listaStyle.css
+++ b/src/styles/listaStyle.css
@@ -1,4 +1,3 @@
-/* Estilos gerais */
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f9;
@@ -6,13 +5,11 @@ body {
   padding: 20px;
 }
 
-/* Título */
 h2 {
   color: #333;
   text-align: center;
 }
 
-/* Lista de usuários */
 #listaUsuarios {
   list-style-type: none;
   padding: 0;
@@ -34,7 +31,6 @@ h2 {
   background-color: #e0e0e0;
 }
 
-/* Botão "Voltar" */
 #go-back {
   display: block;
   margin: 20px auto;
@@ -52,16 +48,14 @@ h2 {
   background-color: #555;
 }
 
-/* Estilo para a imagem do usuário */
 .user-photo {
-  width: 200px; /* Largura da foto */
-  height: 200px; /* Altura da foto */
-  border-radius: 50%; /* Deixa a imagem redonda */
-  margin-right: 20px; /* Espaço entre a foto e as informações */
-  object-fit: cover; /* Garante que a imagem preencha o círculo sem deformar */
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-right: 20px;
+  object-fit: cover;
 }
 
-/* Modal */
 .modal {
   position: fixed;
   top: 50%;
@@ -71,26 +65,25 @@ h2 {
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000; /* Acima do overlay */
-  display: none; /* Inicialmente oculto */
-  max-width: 500px; /* Largura máxima */
-  width: 90%; /* Largura responsiva */
-  box-sizing: border-box; /* Inclui padding no tamanho */
+  z-index: 1000;
+  display: none;
+  max-width: 500px;
+  width: 90%;
+  box-sizing: border-box;
 }
 
-/* Modal Content */
 .modal-content {
   text-align: left;
 }
 
 .user-photo {
   display: block;
-  margin: 0 auto 20px auto; /* Centraliza a foto e adiciona margem inferior */
+  margin: 0 auto 20px auto;
 }
 
 #userDetails {
   font-size: 1em;
-  line-height: 1.5; /* Melhor espaçamento entre linhas */
+  line-height: 1.5;
 }
 
 #userDetails strong {
@@ -100,20 +93,18 @@ h2 {
   color: #333;
 }
 
-/* Overlay para escurecer */
 .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro */
-  backdrop-filter: blur(5px); /* Blur aplicado */
-  z-index: 999; /* Abaixo do modal */
-  display: none; /* Inicialmente oculto */
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 999;
+  display: none;
 }
 
-/* Fechar modal */
 .close {
   color: rgb(218, 45, 45);
   float: right;
@@ -128,7 +119,6 @@ h2 {
   color: #555;
 }
 
-/* Botões de ação (Editar e Excluir) */
 .edit-button,
 .delete-button {
   height: 40px;
@@ -153,7 +143,6 @@ h2 {
   width: 20px;
 }
 
-/* Botão de Voltar no modal */
 .go-back {
   display: block;
   width: 100%;
@@ -204,7 +193,6 @@ h2 {
   background-color: #555;
 }
 
-/* Estilo para os campos do formulário no modal */
 .modal form {
   display: grid;
 }
@@ -224,7 +212,7 @@ h2 {
   font-size: 1em;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box; /* Inclui padding no tamanho */
+  box-sizing: border-box;
 }
 
 .modal form input[type="text"]:focus,
