--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -8,7 +8,6 @@
 <body>
   <h2>Cadastro de Leitores</h2>
   <form id="formCadastro">
-    <!-- Campos do formulário -->
     <label>Nome Completo: <input type="text" id="nome" required></label>
     <label>Email: <input type="email" id="email"></label>
     <label>Telefone: <input type="tel" id="telefone"></label>
@@ -35,6 +34,6 @@
   </form>
   <button onclick="history.back()" class="go-back">Voltar</button>
 
-  <script src="../src/cadastroScript.js"></script> <!-- Arquivo JavaScript separado -->
+  <script src="../src/cadastroScript.js"></script>
 </body>
 </html>
