--- a/views/lista.html
+++ b/views/lista.html
@@ -11,7 +11,6 @@
 <body>
   <h2>Lista de Leitores</h2>
 
-  <!-- Campo de pesquisa -->
   <div id="campoSuperior">
     <label for="searchInput" class="pesquisaTxt">Pesquisar por nome:</label>
     <input type="text" id="searchInput" placeholder="Digite o nome do leitor">
@@ -19,7 +18,6 @@
   </div>
   <ul id="listaUsuarios"></ul>
 
-  <!-- Modal para exibir detalhes do usuário -->
   <div id="modalcenter">
     <div id="modalOverlay" class="modal-overlay"></div>
     <div id="userDetailsModal" class="modal">
@@ -64,15 +62,13 @@
     let currentUserId = null;
     let allUsuarios = [];
 
-    // Função para listar os usuários
     function listarUsuarios(callback) {
       ipcRenderer.invoke('listar-usuarios').then(callback).catch(console.error);
     }
 
-    // Atualiza a lista de usuários na interface
     function atualizarListaUsuarios(usuarios) {
       const lista = document.getElementById('listaUsuarios');
-      lista.innerHTML = ''; // Limpa a lista antes de atualizar
+      lista.innerHTML = '';
       usuarios.sort((a, b) => a.fullName.localeCompare(b.fullName));
       usuarios.forEach((usuario) => {
         const li = document.createElement('li');
@@ -82,7 +78,6 @@
       });
     }
 
-    // Exibe os detalhes do usuário em um modal
     function mostrarDetalhesUsuario(id) {
       ipcRenderer.invoke('obter-detalhes-usuario', id).then((usuario) => {
         currentUserId = id;
@@ -101,7 +96,6 @@
       }).catch(console.error);
     }
 
-    // Função de pesquisa
     document.getElementById('searchInput').addEventListener('input', (event) => {
       const searchTerm = event.target.value.toLowerCase();
       const filteredUsuarios = allUsuarios.filter(usuario =>
@@ -110,13 +104,11 @@
       atualizarListaUsuarios(filteredUsuarios);
     });
 
-    // Inicializa a lista de usuários ao carregar a página
     listarUsuarios((usuarios) => {
-      allUsuarios = usuarios; // Armazena todos os usuários
+      allUsuarios = usuarios;
       atualizarListaUsuarios(usuarios);
     });
 
-    // Alterna entre os modos de visualização e edição
     document.getElementById('editSaveButton').addEventListener('click', () => {
       const fields = [
         'fullName', 'emailAddress', 'phoneNumber', 'school',
@@ -163,7 +155,6 @@
       }
     });
 
-    // Fecha o modal
     function fecharModal() {
       document.getElementById('userDetailsModal').style.display = 'none';
       document.getElementById('modalOverlay').style.display = 'none';
