--- a/src/styles/livrosStyle.css
+++ b/src/styles/livrosStyle.css
@@ -13,7 +13,6 @@ body {
 
 h1 {
     text-align: center;
-    margin-bottom: 20px;
     color: #2c3e50;
 }
 
@@ -21,6 +20,12 @@ h1 {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+#campoSuperior {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
 }
 
 .btn-load {
@@ -59,11 +64,11 @@ h1 {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-  }
-  
-  .go-back:hover {
+}
+
+.go-back:hover {
     background-color: #2980b9;
-  }
+}
 
 .book-list {
     display: grid;
