--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,7 +11,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
 }
 
 .indexBody {
@@ -86,7 +85,7 @@ button:hover {
   max-width: 200px;
   margin: 20px auto;
   padding: 12px;
-  background-color: #3498db;
+  background-color: #007bff;
   color: white;
   font-size: 16px;
   border: none;
@@ -96,7 +95,7 @@ button:hover {
 }
 
 .go-back:hover {
-  background-color: #2980b9;
+  background-color: #555;
 }
 
 #camera,
